--- a/index.html
+++ b/index.html
@@ -132,26 +132,26 @@
                 </div>
                 <hr style="border: 2px solid rgb(203, 234, 32);">
                 <div class="main__blok2-blok1">
-                  <a href="#">
+                  <!-- <a href="#">
                     <picture>
                       <img class="main__blok2-blok1__logo" width="100" alt="reakt" src="./assets/img/01.webp">
                     </picture>
                     <h2 class="main__blok2-blok1__title">РІЗНЕ</h2>
-                  </a>
-                  <a href="#">
+                  </a> -->
+                  <!-- <a href="#">
                     <picture>
                       <source media="(max-width: 600px)" srcset="./assets/img/1-600.webp" type="image/webp">
                       <img class="main__blok2-blok1__logo" width="100" alt="html css js" src="./assets/img/1.webp">
                     </picture>
                     <h2 class="main__blok2-blok1__title">HTML CSS</h2>
-                  </a>
-                  <a href="#">
+                  </a> -->
+                  <!-- <a href="#">
                     <picture>
                       <source media="(max-width: 600px)" srcset="./assets/img/js-600.webp" type="image/webp">
                       <img class="main__blok2-blok1__logo" width="100" alt="javascript" src="./assets/img/js.webp">
                     </picture>
                     <h2 class="main__blok2-blok1__title">JS</h2>
-                  </a>
+                  </a> -->
                   <a href="https://vscode.dev/?vscode-lang=ru-ru" target="_blank">
                     <picture>
                       <img class="main__blok2-blok1__logo" width="100" alt="vs code" src="./assets/img/6.webp">
@@ -164,13 +164,17 @@
                     </picture>
                     <h2 class="main__blok2-blok1__title">stackblitz</h2>
                   </a>
-                  <a href="https://github.com/login" target="_blank">
+                  <a href="https://github.com/jekaboss" target="_blank">
                     <picture>
-                      <source media="(max-width: 600px)" srcset="./assets/img/8-600.webp" type="image/webp">
-                      <source media="(max-width: 1200px)" srcset="./assets/img/8-1200.webp" type="image/webp">
                       <img class="main__blok2-blok1__logo" width="100" alt="github" src="./assets/img/8.png">
                     </picture>
-                    <h2 class="main__blok2-blok1__title">github</h2>
+                    <h2 class="main__blok2-blok1__title">jekaboss</h2>
+                  </a>
+                  <a href="https://github.com/asus13note" target="_blank">
+                    <picture>
+                      <img class="main__blok2-blok1__logo" width="100" alt="github" src="./assets/img/9.jpg">
+                    </picture>
+                    <h2 class="main__blok2-blok1__title">asus13note</h2>
                   </a>
                 </div>
                 <hr style="border: 2px solid rgb(203, 234, 32);">
@@ -181,6 +185,7 @@
                   <a class="main__blok2-blok2--a" href="https://fls.guru/" target="_blank">шпаргалка ( Фрилансер по
                     життю
                     ),</a>
+                    <a class="main__blok2-blok2--a" href="https://devdocs.io/" target="_blank">Корисна шпаргалка</a>
                   <a class="main__blok2-blok2--a" href="https://yhub.net/login" target="_blank">Безплатний розмишеня
                     свого
                     сайта,</a>
@@ -194,6 +199,7 @@
                     target="_blank">создания чат бота,</a>
                   <a class="main__blok2-blok2--a" href="https://ru.pinterest.com/" target="_blank">pinterest,</a>
                   <a class="main__blok2-blok2--a" href="https://www.udemy.com/" target="_blank">udemy.</a>
+                  
                 </div>
                 <!-- ================================================================================== -->
                 <hr style="border: 2px solid rgb(203, 234, 32);">
@@ -351,13 +357,6 @@
     <footer data-fls-footer="" class="footer">
       <div class="footer__container">
         <div class="footer__inner">
-          <div class="footer__logo">
-            <a href="/" class="footer__logo-link">
-              <picture>
-                <img alt="WEP-Blocknote Logo" class="footer__logo-img" src="./assets/img/logo.webp">
-              </picture>
-            </a>
-          </div>
           <div class="footer__text">
             <p>© 2025 WEP-Blocknote.</p>
           </div>
