--- a/serveri.html
+++ b/serveri.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" crossorigin="" href="./css/app.css">
 		<link rel="stylesheet" crossorigin="" href="./css/serveri.css">
 		<link rel="stylesheet" crossorigin="" href="./css/javajs.css">
+    <link rel="stylesheet" crossorigin="" href="./css/tabs.css">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -66,12 +67,6 @@
 								</ul>
 							</nav>
 						</div>
-						<!--
-<fetch url="@components/layout/menu/menu.js?v=1751815721684on">
-<each loop='item in response'>
-</each>
-</fetch>
--->
 					</div>
 				</div>
 			</header>
@@ -96,31 +91,27 @@
 									<!-- ======================================================================================= -->
 									<div data-fls-spollers="" class="spollers">
 										<details class="spollers__item">
-											<summary class="spollers__title">МЕНЮ</summary>
-											<div class="spollers__body">
-												<ul class="spollers__list">
-													<nav class="menu__body">
-														<ul class="menu__list list--spollers">
-															<li class="menu__item">
-																<a href="video.html" class="menu__link">мастер-клас</a>
-															</li>
-															<li class="menu__item">
-																<a href="vite.html" class="menu__link">Сборщик проектов Vite</a>
-															</li>
-															<li class="menu__item">
-																<a href="video1.html" class="menu__link">Видео уроки</a>
-															</li>
-															<li class="menu__item">
-																<a href="ip.html" class="menu__link">Полезни Статті зі світу IT</a>
-															</li>
-															<li class="menu__item">
-																<a href="serveri.html" class="menu__link">Про Сервери</a>
-															</li>
-														</ul>
-													</nav>
-												</ul>
-											</div>
-										</details>
+                    <summary class="spollers__title">СПОЛЛЕРИ</summary>
+                    <div class="spollers__body">
+                      <ul class="spollers__list">
+                        <li class="tabs__body tabs__body-wp">
+                          <a href="video.html">мастер-клас</a>
+                        </li>
+                        <li class="tabs__body tabs__body-wp">
+                          <a href="vite.html">Сборщик проектов Vite</a>
+                        </li>
+                        <li class="tabs__body tabs__body-wp">
+                          <a href="video1.html">Видео уроки</a>
+                        </li>
+                        <li class="tabs__body tabs__body-wp">
+                          <a href="ip.html">Полезни Статті зі світу IT</a>
+                        </li>
+                        <li class="tabs__body tabs__body-wp">
+                          <a href="serveri.html">Про Сервери</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </details>
 									</div>
 								</div>
 								<!-- =================================================================================================== -->
@@ -136,23 +127,9 @@
 			<footer data-fls-footer="" class="footer">
 				<div class="footer__container">
 					<div class="footer__inner">
-						<div class="footer__logo">
-							<a href="/" class="footer__logo-link">
-								<picture>
-									<img alt="WEP-Blocknote Logo" class="footer__logo-img" src="./assets/img/logo.webp">
-								</picture>
-							</a>
-						</div>
 						<div class="footer__text">
 							<p>© 2025 WEP-Blocknote.</p>
 						</div>
-						<!--
-<div class="footer__socials">
-<a href="#" class="footer__social-link">Facebook</a>
-<a href="#" class="footer__social-link">Twitter</a>
-<a href="#" class="footer__social-link">Instagram</a>
-</div>
--->
 					</div>
 				</div>
 			</footer>
