--- a/video.html
+++ b/video.html
@@ -22,6 +22,7 @@
   <link rel="modulepreload" crossorigin="" href="js/video.js">
   <link rel="stylesheet" crossorigin="" href="css/app.css">
   <link rel="stylesheet" crossorigin="" href="css/video.css">
+  <link rel="stylesheet" crossorigin="" href="./css/tabs.css">
 </head>
 
 <body>
@@ -102,28 +103,24 @@
                 <!-- ======================================================================================= -->
                 <div data-fls-spollers="" class="spollers">
                   <details class="spollers__item">
-                    <summary class="spollers__title">МЕНЮ</summary>
+                    <summary class="spollers__title">СПОЛЛЕРИ</summary>
                     <div class="spollers__body">
                       <ul class="spollers__list">
-                        <nav class="menu__body">
-                          <ul class="menu__list list--spollers">
-                            <li class="menu__item">
-                              <a href="video.html" class="menu__link">мастер-клас</a>
-                            </li>
-                            <li class="menu__item">
-                              <a href="vite.html" class="menu__link">Сборщик проектов Vite</a>
-                            </li>
-                            <li class="menu__item">
-                              <a href="video1.html" class="menu__link">Видео уроки</a>
-                            </li>
-                            <li class="menu__item">
-                              <a href="ip.html" class="menu__link">Полезни Статті зі світу IT</a>
-                            </li>
-                            <li class="menu__item">
-                              <a href="serveri.html" class="menu__link">Про Сервери</a>
-                            </li>
-                          </ul>
-                        </nav>
+                        <li class="tabs__body tabs__body-wp">
+                          <a href="video.html">мастер-клас</a>
+                        </li>
+                        <li class="tabs__body tabs__body-wp">
+                          <a href="vite.html">Сборщик проектов Vite</a>
+                        </li>
+                        <li class="tabs__body tabs__body-wp">
+                          <a href="video1.html">Видео уроки</a>
+                        </li>
+                        <li class="tabs__body tabs__body-wp">
+                          <a href="ip.html">Полезни Статті зі світу IT</a>
+                        </li>
+                        <li class="tabs__body tabs__body-wp">
+                          <a href="serveri.html">Про Сервери</a>
+                        </li>
                       </ul>
                     </div>
                   </details>
@@ -222,13 +219,6 @@
     <footer data-fls-footer="" class="footer">
       <div class="footer__container">
         <div class="footer__inner">
-          <div class="footer__logo">
-            <a href="/" class="footer__logo-link">
-              <picture>
-                <img alt="WEP-Blocknote Logo" class="footer__logo-img" src="./assets/img/logo.webp">
-              </picture>
-            </a>
-          </div>
           <div class="footer__text">
             <p>© 2025 WEP-Blocknote.</p>
           </div>
