--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
                   <div class="calendar-grid" id="calendar-grid"></div>
                 </div>
                 <!-- ЗАМЕТКИ -->
-                <div data-fls-well="" class="well"></div>
+                <div data-fls-well="" class="tabs__body tabs__body-wp well">
+                  <a href="https://asus13note.github.io/Portfolio-main/" target="_blank">Порфоліо</a>
+                </div>
               </div>
               <!-- =================================================================================================== -->
               <div class="main__blok2">
