--- a/ip.html
+++ b/ip.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" crossorigin="" href="./css/app.css">
   <link rel="stylesheet" crossorigin="" href="./css/vite.css">
   <link rel="stylesheet" crossorigin="" href="./css/tabs.css">
+  <link rel="stylesheet" crossorigin="" href="./css/wp.css">
 </head>
 
 <body>
@@ -78,12 +79,6 @@
               </ul>
             </nav>
           </div>
-          <!--
-<fetch url="@components/layout/menu/menu.js?v=1751815721684on">
-<each loop='item in response'>
-</each>
-</fetch>
--->
         </div>
       </div>
     </header>
@@ -104,6 +99,9 @@
                     <button id="next-month">→</button>
                   </div>
                   <div class="calendar-grid" id="calendar-grid"></div>
+                </div>
+                <div data-fls-well="" class="tabs__body tabs__body-wp well">
+                  <a href="https://asus13note.github.io/Portfolio-main/" target="_blank">Порфоліо</a>
                 </div>
                 <!-- ======================================================================================= -->
                 <div data-fls-spollers="" class="spollers">
