--- a/video.html
+++ b/video.html
@@ -19,11 +19,12 @@
   <link rel="shortcut icon" href="./assets/img/favicon.ico">
   <title>WEP-Блокнот</title>
   <script type="module" crossorigin="" src="js/app.js"></script>
-  <link rel="modulepreload" crossorigin="" href="js/video.js">
+  <script type="module" crossorigin="" src="js/video.js"></script>
+  <!-- <link rel="modulepreload" crossorigin="" href=""> -->
   <link rel="stylesheet" crossorigin="" href="css/app.css">
   <link rel="stylesheet" crossorigin="" href="css/video.css">
-  <link rel="stylesheet" crossorigin="" href="./css/tabs.css">
-  <link rel="stylesheet" crossorigin="" href="./css/wp.css">
+  <link rel="stylesheet" crossorigin="" href="css/tabs.css">
+  <link rel="stylesheet" crossorigin="" href="css/wp.css">
 </head>
 
 <body>
@@ -136,8 +137,7 @@
                 <section class="modern-container">
                   <div class="modern-video">
                     <div class="video-wrapper">
-                      <iframe id="youtube-player" src="https://www.youtube.com/embed/lqQTaMsu9sI"
-                        allowfullscreen></iframe>
+                      <iframe id="youtube-player" src="https://www.youtube.com/embed/lqQTaMsu9sI" allowfullscreen></iframe>
                     </div>
                   </div>
                   <div class="modern-sidebar">
@@ -145,7 +145,7 @@
                       <li data-video-id="lqQTaMsu9sI" class="active">Відео 1</li>
                       <li data-video-id="tdBJrc6mfUE">Відео 2</li>
                       <li data-video-id="ymY9gsqysYM">Відео 3</li>
-                      <!-- <li data-video-id="">Відео 4</li> -->
+                      <li data-video-id="dTD5Rxl5SD0">Відео 4</li>
                     </ul>
                   </div>
                   <h3>
@@ -157,8 +157,7 @@
                 <section class="modern-container">
                   <div class="modern-video">
                     <div class="video-wrapper">
-                      <iframe id="youtube-player" src="https://www.youtube.com/embed/x91woHXCcyc"
-                        allowfullscreen></iframe>
+                      <iframe id="youtube-player" src="https://www.youtube.com/embed/x91woHXCcyc" allowfullscreen></iframe>
                     </div>
                   </div>
                   <div class="modern-sidebar">
