--- a/video.html
+++ b/video.html
@@ -154,7 +154,7 @@
                   </h3>
                 </section>
                 <hr style="border: 2px solid rgb(234, 32, 32);">
-                <section class="modern-container">
+                <!-- <section class="modern-container">
                   <div class="modern-video">
                     <div class="video-wrapper">
                       <iframe id="youtube-player" src="https://www.youtube.com/embed/x91woHXCcyc" allowfullscreen></iframe>
@@ -169,11 +169,10 @@
                     </ul>
                   </div>
                   <h3>
-                    Адаптивна верстка цікавого сайту. Пояснення дій.
-                    <br>
-                    HTML CSS JS FIGMA. ( ЧФ3 )
+                    Адаптивна верстка сайту з поясненням дій. Розробка сайту безкоштовний майстер-клас HTML CSS JS
+                    FIGMA. ( ЧФ3 )
                   </h3>
-                </section>
+                </section> -->
                 <section class="modern-container container__modern-video">
                   <div class="modern-video">
                     <div class="video-wrapper">
